--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
-/*
-    Template: crypterio
-    Theme Name: Crypterio Child Theme
-    Theme URI: http://crypterio.stylemixthemes.com/
-    Author: StylemixThemes
-    Author URI: http://stylemixthemes.com/
-    Description: Crypterio – theme for ICO Consulting, Bitcoin and Cryptocurrency experts and advisors.  Launch your project featured by ICO landing page template, online cryptocurrency exchange rates, as well as special pages for services and cases.
-    Version: 1.0
-    License: GNU General Public License v2 or later
-    License URI: http://www.gnu.org/licenses/gpl-2.0.html
-    Tags: blue, one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, fixed-layout, fluid-layout, responsive-layout, custom-background, custom-colors, custom-header, custom-menu, sticky-post, translation-ready
-    Text Domain: crypterio-child-theme
+/*
+
+    Template: arcadium
+
+    Theme Name: Arcadium Child Theme
+
+    Theme URI: http://arcadium.games/
+
+    Author: Arcadium Games
+
+    Author URI: http://arcadium.games/
+
+    Description: Arcadium Games is a decentralized crypto gaming platform built on the Ethereum blockchain where players earn crypto by playing games. Enter to earn Arcadium Tokens by playing games now!
+
+    Version: 1.0
+
+    License: GNU General Public License v2 or later
+
+    License URI: http://www.gnu.org/licenses/gpl-2.0.html
+
+    Tags: blue, one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, fixed-layout, fluid-layout, responsive-layout, custom-background, custom-colors, custom-header, custom-menu, sticky-post, translation-ready
+
+    Text Domain: arcadium-child-theme
+
 */
