--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ body {
     padding-bottom: 15px!important;
 }
 
+/* Home */
+.home-social-profiles .essbfc-container {
+    float:left
+}
+
 /* Icons */
 body div .vc_btn3.vc_btn3-style-flat.vc_btn3-icon-left i:hover {
   border: none!important;
@@ -101,6 +106,7 @@ body.error404 {
 
  div.post-content > h4 > a {
    font-size: 42px;
+   line-height: 42px;
    font-weight: 600!important;
     color: #1b2124;
  }
@@ -276,4 +282,52 @@ body .essb_fullwidth_14_100_100 li {
 .mc4wp_checkmark {
     color: #fff;
     margin-top: 10px;
+}
+
+.stm_mailchimp_form {
+    background-image: linear-gradient(to right,#532db8 0,#0196ff 100%)!important;
+    box-shadow: 0 10px 20px 0 rgba(1,150,255,.5)!important;
+}
+
+
+/* Footer */
+#footer {
+    background: #1b2124!important;
+}
+
+.footer-links a {
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.footer-links li {
+    padding-top: 5px;
+}
+
+#footer.style_2 .footer_widgets .widget .widget_title {
+    padding-top: 0!important;
+}
+
+#footer .form-control {
+    border-radius: 6px!important;
+}
+
+#footer.style_2 .footer_widgets .widget {
+    margin-bottom: 0px!important;
+}
+
+#footer .footer_widgets .widget .widget_title {
+    margin: 0!important;
+}
+
+#footer .footer-copyright {
+    color: #ccc;
+    font-size: 14px;
+    text-align: center;
+    padding: 10px 0 30px 0;
+}
+
+.col-xs-12 {
+    margin-top: 15px!important;
 }
